feat: enable github action mvn workflow